--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/battleships
+spring.datasource.username=root
+spring.datasource.password=JazzHands1147kat!
+
+spring.jpa.show-sql=true
+
+server.error.include-message=always
